--- a/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-templates.yaml
+++ b/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-templates.yaml
@@ -297,6 +297,7 @@ data:
       namespace: {{ SITE_NAMESPACE }}
     type: Opaque
     stringData:
+      HUBS: "{{ HUBS }}"
       PROM_KEYCLOAK_PROXY_SSL_LOCALCLUSTER: "{{ PROM_KEYCLOAK_PROXY_SSL_LOCALCLUSTER }}"
       PROM_KEYCLOAK_PROXY_HOST_NAME_LOCALCLUSTER: "{{ PROM_KEYCLOAK_PROXY_HOST_NAME_LOCALCLUSTER }}"
       PROM_KEYCLOAK_PROXY_PORT_LOCALCLUSTER: "{{ PROM_KEYCLOAK_PROXY_PORT_LOCALCLUSTER }}"
