--- a/kustomize/overlays/moc/roles/deploy-workbenches/templates/defaultConfigmap.yaml
+++ b/kustomize/overlays/moc/roles/deploy-workbenches/templates/defaultConfigmap.yaml
@@ -15,11 +15,11 @@ data:
   ZOOKEEPER_ROOT_PATH: '{{ SITE_SHORT_NAME }}-{{ USER_NAME }}'
   SSL_VERIFY: 'true'
   ZOOKEEPER_NAMESPACE: {{ WORKBENCH_NAMESPACE }}
-  ZOOKEEPER_HOST_NAME: zookeeper
+  ZOOKEEPER_HOST_NAME: zookeeper-client
   ZOOKEEPER_PORT: '2181'
   SOLR_NAMESPACE: {{ WORKBENCH_NAMESPACE }}
-  SOLR_HOST_NAME: solr
-  SOLR_PORT: '8983'
+  SOLR_HOST_NAME: solr-solrcloud-common
+  SOLR_PORT: '80'
   SOLR_SSL: 'false'
   SOLR_COLLECTION_COMPUTATE: 'computate-{{ USER_NAME }}'
   SOLR_COLLECTION_FIWARE: 'fiware'
