--- a/kustomize/overlays/moc/roles/deploy-workbenches/tasks/deploy-workbench.yaml
+++ b/kustomize/overlays/moc/roles/deploy-workbenches/tasks/deploy-workbench.yaml
@@ -39,15 +39,6 @@
     wait_condition:
       type: Ready
       status: 'True'
-- name: "Configure vars.py for workbench {{ WORKBENCH_NAME }}"
-  kubernetes.core.k8s_cp:
-    state: to_pod
-    namespace: "{{ WORKBENCH_NAMESPACE }}"
-    pod: "{{ WORKBENCH_NAME }}-0"
-    container: "{{ WORKBENCH_NAME }}"
-    remote_path: /opt/app-root/src/vars.py
-    local_path: "{{ SITE_SRC }}/kustomize/overlays/moc/roles/deploy-workbenches/templates/vars.py"
-    validate_certs: false
 - name: "Update PostgresCluster with database {{ DATABASE_DATABASE }}"
   kubernetes.core.k8s_json_patch:
     namespace: "{{ SITE_NAMESPACE }}"
@@ -82,6 +73,7 @@
           , "redhat.java"
           , "vscjava.vscode-java-debug"
           , "vscjava.vscode-maven"
+          , "golang.go"
         ]
       }
     validate_certs: false
@@ -112,40 +104,8 @@
     pod: "{{ WORKBENCH_NAME }}-0"
     container: "{{ WORKBENCH_NAME }}"
     remote_path: /opt/app-root/src/.local/share/code-server/User/keybindings.json
-    content: |-
-      // Place your key bindings in this file to override the defaultsauto[]
-      [
-          {
-              "key": "ctrl+p",
-              "command": "-extension.vim_ctrl+p",
-              "when": "editorTextFocus && vim.active && vim.use<C-p> && !inDebugRepl || vim.active && vim.use<C-p> && !inDebugRepl && vim.mode == 'CommandlineInProgress' || vim.active && vim.use<C-p> && !inDebugRepl && vim.mode == 'SearchInProgressMode'"
-          },
-          {
-              "key": "ctrl+f",
-              "command": "-extension.vim_ctrl+f",
-              "when": "editorTextFocus && vim.active && vim.use<C-f> && !inDebugRepl && vim.mode != 'Insert'"
-          },
-          {
-              "key": "ctrl+c",
-              "command": "-extension.vim_ctrl+c",
-              "when": "editorTextFocus && vim.active && vim.overrideCtrlC && vim.use<C-c> && !inDebugRepl"
-          },
-          {
-              "key": "ctrl+y",
-              "command": "-extension.vim_ctrl+y",
-              "when": "editorTextFocus && vim.active && vim.use<C-y> && !inDebugRepl"
-          },
-          {
-              "key": "ctrl+w",
-              "command": "-extension.vim_ctrl+w",
-              "when": "editorTextFocus && vim.active && vim.use<C-w> && !inDebugRepl"
-          },
-          {
-              "key": "ctrl+h",
-              "command": "-extension.vim_ctrl+h",
-              "when": "editorTextFocus && vim.active && vim.use<C-h> && !inDebugRepl"
-          }
-      ]
+    content: |
+      {{ lookup('template', 'keybindings.json', convert_data=false) | from_json | to_nice_json }}
     validate_certs: false
 - name: "Create a symbolic link to project vars in home directory"
   kubernetes.core.k8s_exec:
@@ -159,36 +119,37 @@
     pod: "{{ WORKBENCH_NAME }}-0"
     command: >-
       bash -c 'git clone https://github.com/computate-org/computate-base.git /opt/app-root/src/computate-base;
-      (cd /opt/app-root/src/computate-base && mvn clean install)'
+      (cd /opt/app-root/src/computate-base; git pull; mvn clean install)'
 - name: "Clone computate-search project"
   kubernetes.core.k8s_exec:
     namespace: "{{ WORKBENCH_NAMESPACE }}"
     pod: "{{ WORKBENCH_NAME }}-0"
     command: >-
       bash -c 'git clone https://github.com/computate-org/computate-search.git /opt/app-root/src/computate-search;
-      (cd /opt/app-root/src/computate-search && mvn clean install)'
+      (cd /opt/app-root/src/computate-search; git pull; mvn clean install)'
 - name: "Clone computate-vertx project"
   kubernetes.core.k8s_exec:
     namespace: "{{ WORKBENCH_NAMESPACE }}"
     pod: "{{ WORKBENCH_NAME }}-0"
     command: >-
       bash -c 'git clone https://github.com/computate-org/computate-vertx.git /opt/app-root/src/computate-vertx;
-      (cd /opt/app-root/src/computate-vertx && mvn clean install)'
+      (cd /opt/app-root/src/computate-vertx; git pull; mvn clean install)'
 - name: "Clone computate project"
   kubernetes.core.k8s_exec:
     namespace: "{{ WORKBENCH_NAMESPACE }}"
     pod: "{{ WORKBENCH_NAME }}-0"
     command: >-
       bash -c 'git clone https://github.com/computate-org/computate.git /opt/app-root/src/computate;
-      (cd /opt/app-root/src/computate && mvn clean install)'
-- name: "Clone computate project"
+      (cd /opt/app-root/src/computate; git pull; mvn clean install)'
+- name: "Clone ai-telemetry project"
   kubernetes.core.k8s_exec:
     namespace: "{{ WORKBENCH_NAMESPACE }}"
     pod: "{{ WORKBENCH_NAME }}-0"
     command: >-
       bash -c 'git clone https://github.com/OCP-on-NERC/ai-telemetry.git /opt/app-root/src/ai-telemetry;
       git clone https://github.com/OCP-on-NERC/ai-telemetry-static.git /opt/app-root/src/ai-telemetry-static;
-      (cd /opt/app-root/src/ai-telemetry && mvn clean install)'
+      (cd /opt/app-root/src/ai-telemetry; git remote add upstream https://github.com/OCP-on-NERC/ai-telemetry-static.git /opt/app-root/src/ai-telemetry-static);
+      (cd /opt/app-root/src/ai-telemetry; git pull; mvn clean install);'
 - name: "Install python virtualenv"
   kubernetes.core.k8s_exec:
     namespace: "{{ WORKBENCH_NAMESPACE }}"
@@ -211,22 +172,22 @@
     pod: "{{ WORKBENCH_NAME }}-0"
     command: >-
       /opt/app-root/src/python/bin/pip install jupyterlab bash_kernel ansible kubernetes openshift jinja2 jmespath pika --upgrade
-- name: "Create solr computate collection"
+- name: "Create solr computate collection: {{ SOLR_COLLECTION_COMPUTATE }}"
   kubernetes.core.k8s_exec:
     namespace: "{{ SOLR_NAMESPACE }}"
-    pod: solr-0
+    pod: solr-solrcloud-0
     command: >-
       bash -c '
-      env SOLR_AUTH_TYPE=basic SOLR_AUTHENTICATION_OPTS="-Dbasicauth=$SOLR_ADMIN_USERNAME:$SOLR_ADMIN_PASSWORD" /opt/bitnami/solr/bin/solr create_collection --solr-url http://localhost:8983 -c {{ SOLR_COLLECTION_COMPUTATE }} -n computate
+      env SOLR_AUTH_TYPE=basic SOLR_AUTHENTICATION_OPTS="-Dbasicauth=admin:{{ SOLR_PASSWORD }}" /opt/solr/bin/solr create_collection --solr-url http://localhost:8983 -c {{ SOLR_COLLECTION_COMPUTATE }} -n computate
       '
   ignore_errors: true
-- name: "Create solr site collection"
+- name: "Create solr site collection: {{ SOLR_COLLECTION }}"
   kubernetes.core.k8s_exec:
     namespace: "{{ SOLR_NAMESPACE }}"
-    pod: solr-0
+    pod: solr-solrcloud-0
     command: >-
       bash -c '
-      env SOLR_AUTH_TYPE=basic SOLR_AUTHENTICATION_OPTS="-Dbasicauth=$SOLR_ADMIN_USERNAME:$SOLR_ADMIN_PASSWORD" /opt/bitnami/solr/bin/solr create_collection --solr-url http://localhost:8983 -c {{ SOLR_COLLECTION }} -n computate
+      env SOLR_AUTH_TYPE=basic SOLR_AUTHENTICATION_OPTS="-Dbasicauth=admin:{{ SOLR_PASSWORD }}" /opt/solr/bin/solr create_collection --solr-url http://localhost:8983 -c {{ SOLR_COLLECTION }} -n computate
       '
   ignore_errors: true
 - name: "Index the computate-search classes"
@@ -359,3 +320,9 @@
           SITE_LANG=enUS \
           $COMPUTATE_SRC/bin/enUS/index.sh
         '
+- name: "Set the binaries as executable in: {{ SITE_SRC }}/bin/"
+  kubernetes.core.k8s_exec:
+    namespace: "{{ WORKBENCH_NAMESPACE }}"
+    pod: "{{ WORKBENCH_NAME }}-0"
+    command: >-
+     bash -c 'chmod u+x {{ SITE_SRC }}/bin/*.sh'
