--- a/kustomize/overlays/moc/roles/overlay-vars/vars/overlay-vars.yaml
+++ b/kustomize/overlays/moc/roles/overlay-vars/vars/overlay-vars.yaml
@@ -21,6 +21,7 @@ SITE_THEME: dark
 COMPUTATE_SRC: "/opt/app-root/src/computate"
 COMPUTATE_VERTX_SRC: "/opt/app-root/src/computate-vertx"
 SOLR_NAMESPACE: "{{ SITE_NAMESPACE }}"
+SOLR_PASSWORD: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name='solr-solrcloud-security-bootstrap', namespace=SOLR_NAMESPACE)[0].data['admin'] | b64decode }}"
 DATABASE_NAMESPACE: "{{ SITE_NAMESPACE }}"
 ADMIN_NAMESPACE: "{{ SITE_NAMESPACE }}"
 ENABLE_FIWARE: false
@@ -35,14 +36,12 @@ ESI_API_PORT: "8081"
 
 ENABLE_KAFKA: true
 KAFKA_NAMESPACE: "{{ SITE_NAMESPACE }}"
-KAFKA_SSL_KEYSTORE_SECRET: "kafka-{{ SITE_NAME }}"
-KAFKA_SSL_TRUSTSTORE_SECRET: kafka-cluster-ca-cert
 KAFKA_BROKERS: kafka-bootstrap:9093
 KAFKA_GROUP: "esi-ai-telemetry"
 KAFKA_SECURITY_PROTOCOL: SSL
 KAFKA_SSL_KEYSTORE_TYPE: PKCS12
 KAFKA_SSL_KEYSTORE_LOCATION: /opt/kafka/keystore/user.p12
-KAFKA_SSL_KEYSTORE_SECRET: kafka-ai-telemetry
+KAFKA_SSL_KEYSTORE_SECRET: "kafka-{{ SITE_NAME }}"
 KAFKA_SSL_KEYSTORE_PASSWORD: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=KAFKA_SSL_KEYSTORE_SECRET, namespace=SITE_NAMESPACE)[0].data['user.password'] | b64decode }}"
 KAFKA_SSL_TRUSTSTORE_TYPE: PKCS12
 KAFKA_SSL_TRUSTSTORE_LOCATION: /opt/kafka/keystore/user.crt
@@ -50,13 +49,11 @@ KAFKA_SSL_TRUSTSTORE_SECRET: kafka-cluster-ca-cert
 KAFKA_SSL_TRUSTSTORE_PASSWORD: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=KAFKA_SSL_KEYSTORE_SECRET, namespace=SITE_NAMESPACE)[0].data['ca.password'] | b64decode }}"
 
 WORKBENCH_NAMES:
-#  - USER_NAME: dheeraj
-#  - USER_NAME: rh-csaggin
-#  - USER_NAME: tzumainn
-#  - USER_NAME: computate
-#    WORKBENCH_ADMIN: true
-#  - USER_NAME: isaiahstapleton
-#  - USER_NAME: danniesh
-#  - USER_NAME: schwesig
+  - USER_NAME: computate
+    WORKBENCH_ADMIN: true
+  - USER_NAME: tzumainn
+  - USER_NAME: isaiahstapleton
+  - USER_NAME: danniesh
+  - USER_NAME: schwesig
   - USER_NAME: tsisodia10
   - USER_NAME: ajamias
